// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getFormImagePostUrl should respond with failure when an error occurs 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
  },
  "statusCode": 500,
}
`;

exports[`getFormImagePostUrl should return a form image post url 1`] = `"UPDATE Surveys SET image = 'https://publicus-file-uploads.s3.amazonaws.com/form/575ea33e-f654-11e9-802a-5aa538984bd8' WHERE surveyId = 'MOCK_SURVEY_ID'"`;

exports[`getFormImagePostUrl should return a form image post url 2`] = `
Object {
  "body": "{\\"putUrl\\":\\"http://MOCK_URL.com\\"}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "applications/json",
  },
  "statusCode": 200,
}
`;
